# gba-sprite-engine

./: CMakeLists.txt  Project TODO.txt  timespent_Claessen_Bram.csv  timespent_Kellens_Maikel.csv
Claesen_B_Kellens_M/: CMakeLists.txt  README.md
Claesen_B_Kellens_M/src/: backgroundblocks.h  baseMap.h  character_onbewerkt_transparant_16.h  digger.h  dirtAnimation.h  drill_sound.h  gameOverScene.cpp  gameOverScene.h  gameover_scene.cpp  gameover_scene.h  instruction_scene.cpp  instruction_scene.h  kul.h  main.cpp  motherload_scene.cpp  motherload_scene.h  sample_start_scene.cpp  sample_start_scene.h  start_screen_scene.cpp  start_screen_scene.h
Claesen_B_Kellens_M/test/: motherloadtest.cpp
demos/demo1-basicfeatures/src/: character_onbewerkt_transparant_16.h  flying_stuff_scene.cpp  flying_stuff_scene.h  kul.h  sample_start_scene.cpp
demos/demo4-conway/src/: ConwayScene.h
domain model/: Extra uitleg.docx  game_over_scene_detail.drawio  motherload_scene_detail.drawio
engine/: CMakeLists.txt
engine/include/libgba-sprite-engine/: scene.h
foto's voor motherload/: character_onbewerkt_transparant_16.c  character_onbewerkt_transparant_16.h  character_onbewerkt_transparant_16.s  test.h
foto's voor motherload/Background/: shared.h  test.h  tiles.c  tiles.h  tiles.psd
foto's voor motherload/Nieuw/: map.h
foto's voor motherload/test/: character_onbewerkt_transparant_16.c
test/: CMakeLists.txt  motherloadtest.cpp
